tests/diagnostics/statements/assignments/unknown_name/expect.txt
# exit: 1
input/main.coppice:2:5: error: unknown name 'x'
      x = 1
      ^
